--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -30,6 +30,6 @@ set(libviews_SRCS
    instritem.cpp
    partlistitem.cpp )
 
-qt4_automoc(${libviews_SRCS})
+#qt4_automoc(${libviews_SRCS})
 add_library(views STATIC ${libviews_SRCS})
 target_link_libraries(views core)
