Put KXMLGui file in KXMLGUI_INSTALL_DIR.

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -29,7 +29,7 @@ install(TARGETS kcachegrind  ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 install( PROGRAMS kcachegrind.desktop  DESTINATION  ${XDG_APPS_INSTALL_DIR} )
 install( FILES tips  DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind )
-install( FILES kcachegrindui.rc  DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind )
+install( FILES kcachegrindui.rc  DESTINATION  ${KXMLGUI_INSTALL_DIR}/kcachegrind )
 
 ecm_install_icons( ${ICON_INSTALL_DIR}   )
 
