Properly port CMake files to KF5/Qt5.

--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -16,5 +16,8 @@ set(core_SRCS
    config.cpp
    globalconfig.cpp )
 
-#qt5_automoc(${core_SRCS})
 add_library(core STATIC ${core_SRCS})
+
+target_link_libraries(core
+    Qt5::Core
+)
