--- a/cgview/CMakeLists.txt
+++ b/cgview/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(../libcore)
 add_executable(cgview main.cpp)
 
-target_link_libraries(cgview core ${QT_QTCORE_LIBRARY})
+target_link_libraries(cgview core Qt5::Core)
 
 # do not install example code...
 # install(TARGETS cgview ${INSTALL_TARGETS_DEFAULT_ARGS} )
