--- a/kcachegrind/org.kde.kcachegrind.desktop
+++ b/kcachegrind/org.kde.kcachegrind.desktop
@@ -176,3 +176,4 @@ Comment[zh_TW]=效能分析資料視覺化
 X-DBUS-StartupType=Multi
 X-DBUS-ServiceName=net.sf.kcachegrind
 Categories=Qt;KDE;Development;
+X-DBUS-ServiceName=org.kde.kcachegrind
