Port away from KCmdLineParser to QCommandLineParser
REVIEW: 123903

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ IF(NOT WIN32)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/kcachegrind.lsm.cmake ${CMAKE_CURRENT_BINARY_DIR}/kcachegrind.lsm )
 ENDIF(NOT WIN32)
 
+add_definitions(-DTRANSLATION_DOMAIN=\"kcachegrind_qt\")
 
 add_subdirectory( doc )
 add_subdirectory( libcore )
