--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ include(ECMAddAppIcon)
 find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED Core DBus Widgets)
 
 find_package(KF5 REQUIRED
-    Archive CoreAddons DocTools WidgetsAddons XmlGui KDELibs4Support
+    Archive CoreAddons DocTools WidgetsAddons XmlGui I18n
 )
 
 add_definitions(-DQT_STRICT_ITERATORS)
