--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -21,7 +21,8 @@ set(kcachegrind_LIBS
   KF5::CoreAddons
   KF5::I18n
   KF5::XmlGui
-  KF5::KDELibs4Support
+  KF5::ConfigCore KF5::ConfigGui
+  KF5::KIOCore KF5::KIOFileWidgets KF5::KIOWidgets KF5::KIONTLM
 )
 
 target_link_libraries(kcachegrind core views ${kcachegrind_LIBS})
