add_definitions(-DQT_NO_URL_CAST_FROM_STRING) + fix compilation
Don't use QT_STRICT_ITERATORS in release mode, it's less performant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,11 @@ find_package(KF5 REQUIRED
   Archive CoreAddons DocTools WidgetsAddons XmlGui I18n Config KIO
 )
 
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 add_definitions(-DQT_STRICT_ITERATORS)
+endif()
+add_definitions(-DQT_NO_URL_CAST_FROM_STRING)
+
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
 
 set( KCACHEGRIND_VERSION "0.7.4kde")
