--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -174,5 +174,5 @@ Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 Comment[zh_CN]=性能测试数据的可视化表现
 Comment[zh_TW]=效能分析資料視覺化
 X-DBUS-StartupType=Multi
-X-DBUS-ServiceName=io.github.kcachegrind
+X-DBUS-ServiceName=org.kde.kcachegrind
 Categories=Qt;KDE;Development;
