--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories( ../libcore )
-
 set(libviews_SRCS
    globalguiconfig.cpp
    stackitem.cpp
@@ -31,7 +29,10 @@ set(libviews_SRCS
    partlistitem.cpp )
 
 add_library(views STATIC ${libviews_SRCS})
-
+target_include_directories(views
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}
+)
 target_link_libraries(views
     core
     Qt5::Gui
