Correctly load the Qt-native translations
Summary:
ecm_create_qm_loader() uses Q_COREAPP_STARTUP_FUNCTION to inject the
loader of the additiona translator. The macro does not seem to work
when the loader is linked in a separate static library (the code
which uses Qt translations is all inside libcore and libviews).
So call the ECM macro (and then link the special loader) where
the Q(Core)Application is defined.
Many previously untranslated strings are not translated.

Test Plan:
The code compiles, and content of the right pane (coming from
libviews and libcore) is now translated.

Reviewers: #localization, weidendo

Reviewed By: weidendo

Subscribers: weidendo, aacid, #localization

Differential Revision: https://phabricator.kde.org/D4795

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ include(ECMGenerateHeaders)
 include(GenerateExportHeader)
 include(FeatureSummary)
 include(ECMAddAppIcon)
+include(ECMPoQmTools)
 
 find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED Core DBus Gui Widgets)
 
@@ -41,6 +42,8 @@ IF(NOT WIN32)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/kcachegrind.spec.cmake ${CMAKE_CURRENT_BINARY_DIR}/kcachegrind.spec )
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/kcachegrind.lsm.cmake ${CMAKE_CURRENT_BINARY_DIR}/kcachegrind.lsm )
 ENDIF(NOT WIN32)
+
+ecm_create_qm_loader(kcachegrind_QM_LOADER kcachegrind_qt)
 
 add_subdirectory( doc )
 add_subdirectory( libcore )
