--- a/kcachegrind/kcachegrindui.rc
+++ b/kcachegrind/kcachegrindui.rc
@@ -1,5 +1,5 @@
-<!DOCTYPE kpartgui>
-<kpartgui name="kcachegrind" version="4">
+<!DOCTYPE gui SYSTEM "kpartgui.dtd">
+<gui name="kcachegrind" version="4">
  <MenuBar>
   <Menu name="file"><text>&amp;File</text>
    <Action name="file_add" append="open_merge"/>
@@ -54,4 +54,4 @@
  <ToolBar name="stateToolBar" noMerge="1"><text>State Toolbar</text> 
   <Action name="view_cost_type"/>
  </ToolBar>
-</kpartgui>
+</gui>
