--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -14,8 +14,14 @@ qt5_add_resources(kcachegrind_SRCS
     kcachegrind.qrc
 )
 
-file(GLOB ICONS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*-apps-kcachegrind.png")
-ecm_add_app_icon(kcachegrind_SRCS ICONS ${ICONS_SRCS})
+set(kcachegrind_ICONS
+    32-apps-kcachegrind.png
+    48-apps-kcachegrind.png
+    64-apps-kcachegrind.png
+    128-apps-kcachegrind.png
+)
+
+ecm_add_app_icon(kcachegrind_SRCS ICONS ${kcachegrind_ICONS})
 
 add_executable(kcachegrind ${kcachegrind_SRCS})
 
@@ -40,6 +46,10 @@ install( PROGRAMS org.kde.kcachegrind.desktop  DESTINATION  ${KDE_INSTALL_APPDIR
 install( FILES org.kde.kcachegrind.appdata.xml DESTINATION  ${KDE_INSTALL_METAINFODIR} )
 install( FILES tips  DESTINATION  ${KDE_INSTALL_DATADIR}/kcachegrind )
 
-ecm_install_icons( ICONS 128-apps-kcachegrind.png 64-apps-kcachegrind.png 32-apps-kcachegrind.png  48-apps-kcachegrind.png DESTINATION ${KDE_INSTALL_ICONDIR} THEME hicolor   )
+ecm_install_icons(
+    ICONS ${kcachegrind_ICONS}
+    DESTINATION ${KDE_INSTALL_ICONDIR}
+    THEME hicolor
+)
 
 
