--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,16 @@ find_package(KF5 ${KF_MIN_VERSION} REQUIRED
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 add_definitions(-DQT_STRICT_ITERATORS)
 endif()
-add_definitions(-DQT_NO_URL_CAST_FROM_STRING)
+add_definitions(
+    -DQT_DEPRECATED_WARNINGS
+    -DQT_DISABLE_DEPRECATED_BEFORE=0x050600
+    -DQT_USE_QSTRINGBUILDER
+    -DQT_NO_CAST_TO_ASCII
+#     -DQT_NO_CAST_FROM_ASCII
+#     -DQT_NO_CAST_FROM_BYTEARRAY
+    -DQT_NO_URL_CAST_FROM_STRING
+    -DQT_NO_SIGNALS_SLOTS_KEYWORDS
+)
 
 set( KCACHEGRIND_VERSION "0.8.0kde")
 
