--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install missing software on ubuntu
+      run: |
+          sudo apt-get update
+          sudo apt-get install extra-cmake-modules
+
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        modules: 'qtcharts'
+
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
