--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,15 +17,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install missing software on ubuntu
-      run: |
-          sudo apt-get update
-          sudo apt-get install extra-cmake-modules libkf5archive-dev
-
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
         modules: 'qtcharts'
+
+    - name: Install missing software on ubuntu
+      run: |
+          sudo apt-get update
+          sudo apt-get install extra-cmake-modules libkf5archive-dev libkf5coreaddons-dev libkf5doctools-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
