--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install missing software on ubuntu
       run: |
           sudo apt-get update
-          sudo apt-get install extra-cmake-modules libkf5archive-dev libkf5coreaddons-dev libkf5doctools-dev libkf5widgetsaddons-dev libkf5xmlgui-dev libkf5i18n-dev libkf5config-dev
+          sudo apt-get install extra-cmake-modules libkf5archive-dev libkf5coreaddons-dev libkf5doctools-dev libkf5widgetsaddons-dev libkf5xmlgui-dev libkf5i18n-dev libkf5config-dev gettext
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
