--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -22,5 +22,5 @@ target_include_directories(core
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 target_link_libraries(core
-    Qt5::Core
+    Qt::Core
 )
