Require newer KF_MIN_VERSION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ project(kcachegrind VERSION ${KCACHEGRIND_VERSION})
 
 # minimal requirements
 set (QT_MIN_VERSION "6.4.0")
-set (KF_MIN_VERSION "5.56.0")
+set (KF_MIN_VERSION "5.240.0")
+# TODO move the code to work on newer compiler settings
+set (KDE_COMPILERSETTINGS_LEVEL "5.84.0")
 
 find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH})
