--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "org.kde.kcachegrind",
     "runtime": "org.kde.Platform",
-    "runtime-version": "6.6-kf6preview",
+    "runtime-version": "6.6",
     "sdk": "org.kde.Sdk",
     "command": "kcachegrind",
     "rename-icon": "kcachegrind",
