Use versioned Qt library target names
GIT_SILENT

--- a/cgview/CMakeLists.txt
+++ b/cgview/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable(cgview main.cpp)
 
-target_link_libraries(cgview core Qt::Core)
+target_link_libraries(cgview
+    core
+    Qt6::Core
+)
 
 # do not install example code...
 # install(TARGETS cgview ${KDE_INSTALL_TARGETS_DEFAULT_ARGS} )
