Reformat long cmake code line
GIT_SILENT

--- a/pics/hicolor/CMakeLists.txt
+++ b/pics/hicolor/CMakeLists.txt
@@ -1,1 +1,10 @@
-ecm_install_icons( ICONS 16-actions-move.png  16-actions-percent.png  22-actions-hidetemplates.png  22-actions-move.png  22-actions-percent.png  32-actions-percent.png DESTINATION ${KDE_INSTALL_DATADIR}/kcachegrind/icons  )
+ecm_install_icons(
+    ICONS
+        16-actions-move.png
+        16-actions-percent.png
+        22-actions-hidetemplates.png
+        22-actions-move.png
+        22-actions-percent.png
+        32-actions-percent.png
+    DESTINATION ${KDE_INSTALL_DATADIR}/kcachegrind/icons
+)
