--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -17,6 +17,22 @@ target_sources(core PRIVATE
    logger.cpp
    config.cpp
    globalconfig.cpp
+
+   context.h
+   costitem.h
+   eventtype.h
+   subcost.h
+   addr.h
+   tracedata.h
+   loader.h
+   fixcost.h
+   pool.h
+   coverage.h
+   stackbrowser.h
+   utils.h
+   logger.h
+   config.h
+   globalconfig.h
 )
 
 target_link_libraries(core
