--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -13,7 +13,8 @@ Dependencies:
     'frameworks/ki18n': '@latest-kf6'
     'frameworks/kconfig': '@latest-kf6'
     'frameworks/kio': '@latest-kf6'
-    'frameworks/kdbusaddons': '@latest-kf6'      
+    'frameworks/kdbusaddons': '@latest-kf6'
+    'frameworks/kcrash': '@latest-kf6'
 
 Options:
   require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
