implement a tool to visualize control-flow graphs
I implemented a tool to visualize control-flow graph of functions. Each basic block can be visualized in 4 modes:
1. showing only PC of the first instruction and the cost of the block;
2. all from item 1 + instruction mnemonics and arguments;
3. all from item 2 + PC's of each instruction;
4. all from item 3 + cost of each instruction.

Double click on a basic block forces visualization in mode 1.

There are 5 types of branches:
1. true branches - conditional branches which were followed by the control (drawn in blue);
2. false branches - conditional branches which were not followed by the control (drawn in red);
3. unconditional branches (drawn in black);
4. fallthrough branches: from calls or instructions that are followed by instructions being destinations for some jumps (drawn in pink);
5. indirect branches (drawn in green).

Control-flow graph may be traversed with the help of the keyboard.

--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -29,6 +29,7 @@ target_sources(views PRIVATE
    sourceitem.cpp
    instritem.cpp
    partlistitem.cpp
+   controlflowgraphview.cpp
 
    globalguiconfig.h
    stackitem.h
@@ -58,6 +59,7 @@ target_sources(views PRIVATE
    sourceitem.h
    instritem.h
    partlistitem.h
+   controlflowgraphview.h
 )
 
 target_link_libraries(views
